[package]
name = "fakit"
version = "0.3.8"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.77.2"
repository = "https://github.com/sharkLoc/fakit"
description = "fakit: a simple program for fasta file manipulation"
keywords = ["fasta", "fa", "cli", "sequence", "bio"]
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
bio = "1.5.0"
bzip2 = "0.4.4"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
colored = "2.0.4"
env_logger = "0.10.0"
flate2 = "1.0.24"
log = "0.4.20"
noodles = { version = "0.75.0", features = ["core", "fasta", "fastq"] }
noodles-fastq = "0.11.0"
nthash = "0.5.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
regex = "1.9.5"
rust-htslib = "0.40.2"
xz2 = "0.1.7"

[profile.release]
strip = true
