[package]
name = "fakit"
version = "0.4.0"
edition = "2024"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.85.0"
repository = "https://github.com/sharkLoc/fakit"
description = "fakit: a simple program for fasta file manipulation"
keywords = ["fasta", "fa", "cli", "sequence", "bio"]
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bzip2 = "0.6.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
colored = "3.0.0"
env_logger = "0.10.2"
flate2 = "1.1.2"
log = "0.4.27"
noodles = { version = "0.97.0", features = ["core", "fasta", "fastq"] }
paraseq = "0.2.2"
parking_lot = "0.12.4"
rand = "0.9.1"
rand_pcg = "0.9.0"
regex = "1.11.1"
thiserror = "2.0.12"
xz2 = "0.1.7"
zstd = "0.13.3"

[profile.release]
strip = true
